# zickzack

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: bin.rs  db.rs  errs.rs  path.rs
web/: Cargo.toml
web/src/: lib.rs
web/static/: index.html
