[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[[bin]]
name = "backend"
path = "src/bin.rs"

[dependencies]
derive_more = "0.99"
wasm-bindgen = "0.2"
actix-web = "4"
actix-rt = "2"
serde = "1.0"
serde_derive = "1.0"
actix-files = "0.6.2"
