[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21.5"
getrandom = { version = "0.2.10", features = ["js"] }
hex = "0.4.3"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
x25519-dalek = "2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Location',
  'Response',
  'HtmlButtonElement',
  'Event',
  'RequestInit',
  'RequestMode',
  'Headers',
  'Request',
  'console',
  'HtmlTextAreaElement',
  'DomTokenList',
  'CssStyleDeclaration',
  'HtmlInputElement',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
